// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Shades DOM Renders without incident 1`] = `
<Shades
  to={
    <head>
      <style
        data-shades="true"
      />
    </head>
  }
>
  <Component
    to={
      <head>
        <style
          data-shades="true"
        />
      </head>
    }
  >
    <pure(getContext(shades.h1))
      dark={true}
    >
      <getContext(shades.h1)
        dark={true}
      >
        <shades.h1
          dark={true}
          targetDom={
            <head>
              <style
                data-shades="true"
              />
            </head>
          }
        >
          <h1
            className="shades-h1-229e27bf4f232311c23181b9c2eaf3fb287c58f6"
          >
            Hello
          </h1>
        </shades.h1>
      </getContext(shades.h1)>
    </pure(getContext(shades.h1))>
  </Component>
</Shades>
`;

exports[`Shades DOM renders a block matcher without incident 1`] = `
<Shades
  to={
    <head>
      <style
        data-shades="true"
      />
    </head>
  }
>
  <Component
    to={
      <head>
        <style
          data-shades="true"
        />
      </head>
    }
  >
    <pure(getContext(shades.a))
      dark={true}
    >
      <getContext(shades.a)
        dark={true}
      >
        <shades.a
          dark={true}
          targetDom={
            <head>
              <style
                data-shades="true"
              />
            </head>
          }
        >
          <a
            className="shades-a-2e5a42365d82c7afb910df11f4f4a210fd7b6a61"
          >
            Hello
          </a>
        </shades.a>
      </getContext(shades.a)>
    </pure(getContext(shades.a))>
  </Component>
</Shades>
`;

exports[`Shades DOM renders a block matcher without incident 2`] = `
<Shades
  to={
    <head>
      <style
        data-shades="true"
      />
    </head>
  }
>
  <Component
    to={
      <head>
        <style
          data-shades="true"
        />
      </head>
    }
  >
    <pure(getContext(shades.a))>
      <getContext(shades.a)>
        <shades.a
          targetDom={
            <head>
              <style
                data-shades="true"
              />
            </head>
          }
        >
          <a
            className="shades-a-04e364fd62e2ed558a4f6cf657ba7f4287a09c02"
          >
            No Props!
          </a>
        </shades.a>
      </getContext(shades.a)>
    </pure(getContext(shades.a))>
  </Component>
</Shades>
`;
